Legger til forlengelseperioder i output fra diagnostikkendepunktet (#3756)