@@ -1,5 +1,6 @@
 package no.nav.folketrygdloven.kalkulus.rest.forvaltning.dump;
 
+import java.util.Collections;
 import java.util.List;
 
 import jakarta.enterprise.context.ApplicationScoped;
@@ -7,53 +8,47 @@ import jakarta.inject.Inject;
 import jakarta.persistence.EntityManager;
 import jakarta.persistence.Tuple;
 import no.nav.folketrygdloven.kalkulus.domene.entiteter.del_entiteter.Saksnummer;
-import no.nav.folketrygdloven.kalkulus.tjeneste.kobling.KoblingRepository;
 
 @ApplicationScoped
-public class AvklaringsbehovDump implements DebugDumpSak {
-
+public class ForlengelsePerioderDump implements DebugDumpSak {
 
     private EntityManager entityManager;
 
-    public AvklaringsbehovDump() {
+    public ForlengelsePerioderDump() {
         // for proxys
     }
 
     @Inject
-    public AvklaringsbehovDump(EntityManager entityManager) {
+    public ForlengelsePerioderDump(EntityManager entityManager) {
         this.entityManager = entityManager;
     }
 
     @Override
     public List<DumpOutput> dump(Saksnummer saksnummer) {
         var sql = """
-                select cast(k.kobling_referanse as varchar)  ekstern_referanse,
-                        k.id kobling_id,
-                        ab.avklaringsbehov_def,
-                        ab.avklaringsbehov_status,
-                        ab.begrunnelse
-                     from KOBLING k
-                              inner join AVKLARINGSBEHOV ab on ab.kobling_id = k.id
+                select k.id kobling_id, fom, tom, aktiv from kobling k
+                inner join forlengelse_perioder fp on k.id = fp.kobling_id
+                inner join forlengelse_periode f on fp.id = f.forlengelse_perioder_id
                     where k.saksnummer = :saksnummer
-                    order by ab.opprettet_tid asc ;
+                    order by fp.opprettet_tid asc ;
                    """;
 
 
         var query = entityManager.createNativeQuery(sql, Tuple.class)
                 .setParameter("saksnummer", saksnummer.getVerdi());
 
-
-        String path = "avklaringsbehov.csv";
+        String path = "forlengelseperioder.csv";
 
         @SuppressWarnings("unchecked")
         List<Tuple> results = query.getResultList();
 
         if (results.isEmpty()) {
-            return List.of();
+            return Collections.emptyList();
         }
 
         return CsvOutput.dumpResultSetToCsv(path, results)
                 .map(List::of).orElse(List.of());
+
     }
 
 }
